objects/Service_Level__c.object
<CustomObject>
    <fields>
        <fullName>Allocated__c</fullName>
        <description>Service level Allocation % from EDW</description>
        <label>Allocated %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Technology/Services object</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Levels</relationshipLabel>
        <relationshipName>Service_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Searchable__c</fullName>
        <description>Flags if a Service Level is available for search based on bookings data.</description>
        <label>Searchable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Category_Recurring__c</fullName>
        <description>Is the Service Category Recurring</description>
        <label>Service Category Recurring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Description__c</fullName>
        <description>Service Level Description</description>
        <label>Service Level Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level_Status__c</fullName>
        <description>Service Level Status in C3/EDW</description>
        <label>Service Level Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_with_Service_Level__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Service with Service Level</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>Service Levels</description>
    <label>Service Level</label>
    <nameField>
        <label>Service Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Searchable__c</columns>
        <columns>Service_Category_Recurring__c</columns>
        <columns>Service_Level_Description__c</columns>
        <columns>Service_Level_Status__c</columns>
        <columns>Service_with_Service_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>